Using text block in tests